--- a/manager/media/style/RevoStyle/style.css
+++ b/manager/media/style/RevoStyle/style.css
@@ -1490,7 +1490,7 @@ table.sortabletable {
 }
 
 .sortabletable td, .sortabletable th {
-    padding: 3px 5px;
+    padding: 8px;
     border: 1px solid #ccc;
 }
 
